--- a/www/plugins/cordova-plugin-inappbrowser/tests/resources/inject.css
+++ b/www/plugins/cordova-plugin-inappbrowser/tests/resources/inject.css
@@ -15,13 +15,7 @@
  * KIND, either express or implied.  See the License for the
  * specific language governing permissions and limitations
  * under the License.
- *
 */
-
-if (!document.querySelector('meta[http-equiv=Content-Security-Policy]')) {
-    var msg = 'No Content-Security-Policy meta tag found. Please add one when using the cordova-plugin-whitelist plugin.';
-    console.error(msg);
-    setInterval(function() {
-        console.warn(msg);
-    }, 10000);
+#style-update-file {
+    display: block !important;
 }
